--- a/client/src/styles/HomeStyle.scss
+++ b/client/src/styles/HomeStyle.scss
@@ -4,6 +4,71 @@
 
     flex-direction: column; 
     
+        .listFilter {
+            background: white;
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
+            padding: 10px;
+    
+            border-bottom: 1px solid #dddede;
+            .filterSelectWrapper {
+                flex: 1 0 auto;
+
+
+                .filterSelect {
+                    padding: 10px 10px;
+                    height: 100%;
+                    border: 1px solid #dddede;
+                    border-radius: 7px;
+        
+                    position: relative;
+        
+                    display: flex;
+                    justify-content: space-between;
+                    width: 50%;
+        
+                    &:hover {
+                        border: 1px solid #00bfff;
+                    }
+        
+                    .rect {
+                        width: 20px;
+                        height: 20px;
+                    }
+                    .options{
+                        position: absolute;
+                        left: 0;
+                        top: 45px;
+                        padding-top: 14px;
+                        border-radius: 10px;
+        
+                        font-size: 15px;
+                        background: white;
+                        box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        
+                        overflow-y: scroll;
+                        max-height: 200px;
+                        width: 100%;
+        
+                        .option {   
+                            padding: 10px;
+                            transition: 0.1s;
+        
+                            &:hover {
+                                background: #02c0ff;
+                                color: white;
+                                transition: 0.1s;
+                            }
+                        }
+                    }
+                }
+            }
+            
+
+    }
+    
+
     .listSort {
         background: white;
 
@@ -75,6 +140,8 @@
     border-radius: 5px;
     transition: 0.5s ease;
 
+    text-decoration: none;
+
     text-align: center;
 
     padding: 10px 20px ;
@@ -93,4 +160,20 @@
 
 .ml {
     margin-left: 10px;
+}
+
+.arrow {
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+}
+
+.arrow-top {
+    transition: 0.5s;
+    transform: rotate(270deg);
+}
+
+.arrow-bottom {
+    transition: 0.5s;
+    transform: rotate(90deg);
 }
